--- a/guikuki-web/src/main/webapp/static/css/template/social.css
+++ b/guikuki-web/src/main/webapp/static/css/template/social.css
@@ -1,13 +1,19 @@
 #social {
     width: 1000px;
     padding: 10px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
     background-color: #ffffff;
 }
 
 section#social {
-    height: 40px;
+    height: 20px;
+}
+
+section#social a {
+    font-size: 140%;
+    text-decoration:none;
+    color: #6e9a81;
+    font-family: Capsuula, Georgia, "Times New Roman", Times, serif;
 }
 
 
