--- a/guikuki-web/src/main/webapp/static/css/template/_fonts.scss
+++ b/guikuki-web/src/main/webapp/static/css/template/_fonts.scss
@@ -1,3 +1,5 @@
+// Contains all the fonts needed for the site.
+
 @font-face {
 	font-family: "Amatic-Bold";
 	src: url("/static/fonts/Amatic-Bold.ttf");
