--- a/guikuki-web/src/main/webapp/static/css/home.scss
+++ b/guikuki-web/src/main/webapp/static/css/home.scss
@@ -51,6 +51,7 @@
     }
     .descriptionRestaurant {
         display: table-cell;
+        position: relative;
         padding: 30px;
         vertical-align: top;
         border-radius: 0px 20px 20px 0px;
