Restaurant Detail view improved.

--- a/guikuki-web/src/main/webapp/static/css/home.scss
+++ b/guikuki-web/src/main/webapp/static/css/home.scss
@@ -42,7 +42,7 @@
 .contentRestaurant {
     display: table-row;
     background-color: $lightBrown;
-    img {
+    .mainPicture {
         display: table-cell;
         margin: 40px;
         vertical-align: top;
