--- a/guikuki-web/src/main/webapp/static/css/home.css
+++ b/guikuki-web/src/main/webapp/static/css/home.css
@@ -37,6 +37,9 @@
   right: 10%;
   bottom: 10%; }
 
+.underline {
+  text-decoration: underline; }
+
 body {
   font-family: Georgia, Verdana, sans-serif;
   font-size: small;
@@ -85,6 +88,9 @@ ul {
   right: 10%;
   bottom: 10%; }
 
+.underline {
+  text-decoration: underline; }
+
 #social {
   background-color: white;
   height: 20px; }
@@ -123,6 +129,9 @@ ul {
   position: absolute;
   right: 10%;
   bottom: 10%; }
+
+.underline {
+  text-decoration: underline; }
 
 #header {
   color: #6e9a81;
@@ -184,6 +193,9 @@ ul {
   right: 10%;
   bottom: 10%; }
 
+.underline {
+  text-decoration: underline; }
+
 footer {
   color: #6e9a81;
   font-family: Capsuula, Verdana, sans-serif;
@@ -225,7 +237,7 @@ footer {
 .contentRestaurant {
   display: table-row;
   background-color: #c0b698; }
-  .contentRestaurant img {
+  .contentRestaurant .mainPicture {
     display: table-cell;
     margin: 40px;
     vertical-align: top;
