--- a/guikuki-web/src/main/webapp/static/css/restaurants.css
+++ b/guikuki-web/src/main/webapp/static/css/restaurants.css
@@ -37,6 +37,9 @@
   right: 10%;
   bottom: 10%; }
 
+.underline {
+  text-decoration: underline; }
+
 body {
   font-family: Georgia, Verdana, sans-serif;
   font-size: small;
@@ -85,6 +88,9 @@ ul {
   right: 10%;
   bottom: 10%; }
 
+.underline {
+  text-decoration: underline; }
+
 #social {
   background-color: white;
   height: 20px; }
@@ -123,6 +129,9 @@ ul {
   position: absolute;
   right: 10%;
   bottom: 10%; }
+
+.underline {
+  text-decoration: underline; }
 
 #header {
   color: #6e9a81;
@@ -184,6 +193,9 @@ ul {
   right: 10%;
   bottom: 10%; }
 
+.underline {
+  text-decoration: underline; }
+
 footer {
   color: #6e9a81;
   font-family: Capsuula, Verdana, sans-serif;
@@ -222,10 +234,18 @@ footer {
       padding-top: 20px;
       font-weight: bolder; }
 
+.contentRestaurant .descriptionRestaurant, .contentRestaurant .dataRestaurant {
+  display: table-cell;
+  position: relative;
+  padding: 30px;
+  vertical-align: top;
+  border-radius: 0px 20px 20px 0px;
+  color: #310212; }
+
 .contentRestaurant {
   display: table-row;
   background-color: #c0b698; }
-  .contentRestaurant img {
+  .contentRestaurant .mainPicture {
     display: table-cell;
     margin: 40px;
     vertical-align: top;
@@ -237,17 +257,19 @@ footer {
     /* IE 9 */
     -webkit-transform: rotate(-7deg);
     /* Opera, Chrome, and Safari */ }
-  .contentRestaurant .descriptionRestaurant {
-    display: table-cell;
-    padding: 30px;
-    vertical-align: top;
-    border-radius: 0px 20px 20px 0px;
-    color: #310212; }
-    .contentRestaurant .descriptionRestaurant p:first-letter {
-      font-size: 500%;
-      font-weight: bolder;
-      float: left;
-      margin: 0px 5px 0px 0px;
-      padding: 0px;
-      line-height: 0.8;
-      text-shadow: 2px 2px 0 #ebe3ca, 5px 5px 0 #310212; }
+  .contentRestaurant .descriptionRestaurant p:first-letter {
+    font-size: 500%;
+    font-weight: bolder;
+    float: left;
+    margin: 0px 5px 0px 0px;
+    padding: 0px;
+    line-height: 0.8;
+    text-shadow: 2px 2px 0 #ebe3ca, 5px 5px 0 #310212; }
+  .contentRestaurant .dataRestaurant .description:first-letter {
+    font-size: 500%;
+    font-weight: bolder;
+    float: left;
+    margin: 0px 5px 0px 0px;
+    padding: 0px;
+    line-height: 0.8;
+    text-shadow: 2px 2px 0 #ebe3ca, 5px 5px 0 #310212; }
