--- a/guikuki-web/src/main/webapp/static/css/template/_social.scss
+++ b/guikuki-web/src/main/webapp/static/css/template/_social.scss
@@ -10,7 +10,10 @@
       font-size: 140%;
       text-decoration:none;
       color: $green;
+      padding: 5px;
+      border-radius: 5px;
       @include completeFont(Capsuula);
+      @include fade($white, $green, .2s);
     }
 }
 
