--- a/guikuki-web/src/main/webapp/static/css/restaurants.css
+++ b/guikuki-web/src/main/webapp/static/css/restaurants.css
@@ -246,6 +246,9 @@ footer {
     font-family: Amatic-Bold, Verdana, sans-serif; }
     .headerRestaurant p.titleRestaurantListItem {
       padding-top: 20px; }
+    .headerRestaurant p.titleRestaurantDetail {
+      font-size: 500%;
+      padding-bottom: 20px; }
 
 .contentRestaurant .descriptionRestaurant, .contentRestaurant .dataRestaurant, .pictureSection, .dataSection {
   display: table-cell;
@@ -287,61 +290,59 @@ footer {
     line-height: 0.8;
     text-shadow: 2px 2px 0 #ebe3ca, 5px 5px 0 #310212; }
 
-.verticalTabs {
-  position: relative;
-  min-height: 700px;
-  /* This part sucks */
-  clear: both;
+.restaurantDetail {
   margin: 30px; }
 
-.verticalTab {
-  float: left;
+.tabSet {
+  display: table;
   color: #310212;
-  width: 25%; }
-  .verticalTab label {
-    font-family: Amatic-Bold, Verdana, sans-serif;
-    font-size: 250%;
-    font-weight: bolder;
-    background: #ebe3ca;
-    color: #310212;
-    text-align: center;
-    display: block;
-    border-radius: 20px 20px 0px 0px;
-    padding: 10px 0px;
-    margin: 0px 1px;
-    position: relative;
-    transition: all 0.2s ease-in-out; }
-    .verticalTab label:hover {
-      color: #310212;
-      background-color: #d3ccb8;
+  width: 100%; }
+  .tabSet ul {
+    display: table-row; }
+    .tabSet ul .tab {
+      display: table-cell;
+      width: 25%;
+      font-family: Amatic-Bold, Verdana, sans-serif;
+      font-size: 250%;
+      font-weight: bolder;
+      background: #ebe3ca;
+      text-align: center;
+      border-radius: 20px 20px 0px 0px;
+      padding: 10px 0px;
+      border-right: 1px solid white;
+      border-left: 1px solid white;
       transition: all 0.2s ease-in-out; }
-    .verticalTab label:focus {
-      color: #310212;
-      background-color: #d3ccb8;
+      .tabSet ul .tab:hover {
+        color: #310212;
+        background-color: #d3ccb8;
+        transition: all 0.2s ease-in-out; }
+      .tabSet ul .tab:focus {
+        color: #310212;
+        background-color: #d3ccb8;
+        transition: all 0.2s ease-in-out; }
+      .tabSet ul .tab a {
+        text-decoration: none;
+        color: #310212; }
+    .tabSet ul .first {
+      border-left: 0px; }
+    .tabSet ul .last {
+      border-right: 0px; }
+    .tabSet ul .selected {
+      background: #c0b698;
       transition: all 0.2s ease-in-out; }
-  .verticalTab [type=radio] {
-    display: none; }
-  .verticalTab .firstVerticalLabel {
-    margin: 0px 1px 0px 0px; }
-  .verticalTab .lastVerticalLabel {
-    margin: 0px 0px 0px 1px; }
+      .tabSet ul .selected:hover {
+        color: #c0b698;
+        background-color: #c0b698;
+        transition: all 0.2s ease-in-out; }
+      .tabSet ul .selected:focus {
+        color: #c0b698;
+        background-color: #c0b698;
+        transition: all 0.2s ease-in-out; }
 
 .tabContent {
-  position: absolute;
   background: #c0b698;
-  top: 56px;
-  left: 0;
-  right: 0;
-  bottom: 0;
   padding: 20px;
   border-radius: 0px 0px 20px 20px; }
-
-[type=radio]:checked ~ label {
-  background: #c0b698;
-  z-index: 2; }
-
-[type=radio]:checked ~ label ~ .tabContent {
-  z-index: 1; }
 
 .general {
   display: table-row; }
@@ -349,8 +350,8 @@ footer {
     background: url("/static/images/clip-left.png") no-repeat scroll 0 0 transparent;
     position: absolute;
     content: '';
-    left: -13px;
-    top: 38px;
+    left: 237px;
+    top: 332px;
     z-index: 10;
     width: 100px;
     height: 80px;
